Small fix to the tooltip, was getting cutoff by overflow constraints

--- a/angular2-client/src/app/journals-page/page-display/page-bullet/page-bullet.component.css
+++ b/angular2-client/src/app/journals-page/page-display/page-bullet/page-bullet.component.css
@@ -2,6 +2,7 @@
 	position: relative;
 	padding: 0;
 	min-height: 32px;
+	overflow: visible;
 }
 
 :host p {
